# plebcodes

./: .gitignore  Prof.sh  README.md  plebcodes.cabal
bench/: Main.hs
src/: Solution.hs
